--- a/gramikom/local.properties
+++ b/gramikom/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 15 16:14:49 ICT 2022
-sdk.dir=C\:\\Users\\mikob\\AppData\\Local\\Android\\Sdk
+#Wed Nov 16 18:38:32 ICT 2022
+sdk.dir=C\:\\Users\\wisnu\\AppData\\Local\\Android\\Sdk
